Fixes padding issues on smaller windows

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -142,8 +142,6 @@ body {
 #main-block {
     width: 80%;
     /*background-color: #737373dd;*/
-    padding-left: 10em;
-    padding-right: 10em;
     margin-left: auto;
     margin-right: auto;
     padding-top: 2em;
